Readme.md add package.json add correct SVGs paths
Added README file, package.json with dependencies. Corrected paths to
sprite.svg in index.html.
Also changed CSS file to "expanded" from compressed.

--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
                     <h3>My name is Designer.</h3>
                     <div class="header__hero-links">
                         <a href="#"> <svg class="header__hero-link">
-                                <use xlink:href="/assets/svg/sprite.svg#twit"></use>
+                                <use xlink:href="assets/svg/sprite.svg#twit"></use>
                             </svg></a>
                         <a href="#"> <svg class="header__hero-link">
-                                <use xlink:href="/assets/svg/sprite.svg#in"></use>
+                                <use xlink:href="assets/svg/sprite.svg#in"></use>
                             </svg></a>
                         <a href="#"> <svg class="header__hero-link">
-                                <use xlink:href="/assets/svg/sprite.svg#git"></use>
+                                <use xlink:href="assets/svg/sprite.svg#git"></use>
                             </svg></a>
                         <a href="#"> <svg class="header__hero-link">
-                                <use xlink:href="/assets/svg/sprite.svg#fb"></use>
+                                <use xlink:href="assets/svg/sprite.svg#fb"></use>
                             </svg></a>
                     </div>
                 </div>
@@ -94,14 +94,14 @@
             <div class="skills__cards">
                 <div class="skills__card">
                     <svg class="skills__card-svg">
-                        <use xlink:href="/assets/svg/sprite.svg#uxui"></use>
+                        <use xlink:href="assets/svg/sprite.svg#uxui"></use>
                     </svg>
                     <h5 class="skills__card-title">UX/UI</h5>
                     <p class="skills__card-text">Figma</p>
                 </div>
                 <div class="skills__card">
                     <svg class="skills__card-svg skills__card-svg--wide">
-                        <use xlink:href="/assets/svg/sprite.svg#frontend"></use>
+                        <use xlink:href="assets/svg/sprite.svg#frontend"></use>
                     </svg>
                     \ <h5 class="skills__card-title">Front End</h5>
                     <p class="skills__card-text">Html, Css, JavaScript</p>
@@ -154,7 +154,7 @@
                 <div class="contact__info">
                     <div>
                         <svg class="contact__svg">
-                            <use xlink:href="/assets/svg/sprite.svg#mail"></use>
+                            <use xlink:href="assets/svg/sprite.svg#mail"></use>
                         </svg>
                         <p class="contact__text">Please describe your question. Send me a message and I will answer you
                             as soon as possible!
@@ -163,16 +163,16 @@
                     <div class="contact__adress">
                         <div class="contact__links">
                             <a href="#"> <svg class="contact__link">
-                                    <use xlink:href="/assets/svg/sprite.svg#twit"></use>
+                                    <use xlink:href="assets/svg/sprite.svg#twit"></use>
                                 </svg></a>
                             <a href="#"> <svg class="contact__link">
-                                    <use xlink:href="/assets/svg/sprite.svg#in"></use>
+                                    <use xlink:href="assets/svg/sprite.svg#in"></use>
                                 </svg></a>
                             <a href="#"> <svg class="contact__link">
-                                    <use xlink:href="/assets/svg/sprite.svg#git"></use>
+                                    <use xlink:href="assets/svg/sprite.svg#git"></use>
                                 </svg></a>
                             <a href="#"> <svg class="contact__link">
-                                    <use xlink:href="/assets/svg/sprite.svg#fb"></use>
+                                    <use xlink:href="assets/svg/sprite.svg#fb"></use>
                                 </svg></a>
                         </div>
                         <span> <b>Designer</b> </span>
