logo path correct

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav class="header__nav">
                 <div class="header__logo">
                     <svg class="header__svg">
-                        <use xlink:href="/assets/svg/sprite.svg#logo"></use>
+                        <use xlink:href="assets/svg/sprite.svg#logo"></use>
                     </svg>
                     <span>Dev</span>
                 </div>
