Animation and transitions add, minor mobile view change
Added some animation on contact link, made few minor changed for mobile
view, also added transitions on hover on link elements.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <svg class="skills__card-svg skills__card-svg--wide">
                         <use xlink:href="assets/svg/sprite.svg#frontend"></use>
                     </svg>
-                    \ <h5 class="skills__card-title">Front End</h5>
+                    <h5 class="skills__card-title">Front End</h5>
                     <p class="skills__card-text">Html, Css, JavaScript</p>
                 </div>
                 <div class="skills__card">
