--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Designer Portfolio</title>
+    <link rel="shortcut icon" type="image/png" href="favicon.png" />
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700|Ubuntu:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -27,9 +28,17 @@
                     <li class="header__item"><a href="#contact" class="header__link">Contact</a></li>
                 </ul>
                 <button class="mobile-nav-trigger">
+                    <input class="mobile__input" type="checkbox">
                     <span class="mobile-nav-trigger__box">
                         <span class="mobile-nav-trigger__inner"></span>
                     </span>
+                    <ul class="mobile__menu">
+                        <li class="mobile__item"><a href="#about" class="mobile__link">About me</a></li>
+                        <li class="mobile__item"><a href="#skills" class="mobile__link">Skills</a></li>
+                        <li class="mobile__item"><a href="#portfolio" class="mobile__link">Portfolio</a></li>
+                        <li class="mobile__item"><a href="#contact" class="mobile__link">Contact</a></li>
+                    </ul>
+
                 </button>
             </nav>
 
@@ -65,7 +74,7 @@
             <h2 class="heading about__heading">About me</h2>
             <div class="about__info">
                 <div class="about__img">
-                    <img src="assets/photos/designer.jpg" alt="">
+                    <img src="assets/photos/designer.jpg" alt="My photo">
                 </div>
                 <div class="about__bio">
                     <ul class="about__bio-list">
@@ -120,13 +129,13 @@
             <h2 class="heading portfolio__heading">Portfolio</h2>
             <div class="portfolio__gallery">
                 <div class="portfolio__item portfolio__item--1">
-                    <img src="assets/photos/portfolio-1.jpg" alt="" class="portfolio__img">
                     <div class="portfolio__item-layer">
                         <h2>Design</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident expedita nemo at
                             quibusdam enim nisi architecto aut, animi voluptas veniam saepe similique.</p>
                         <div class="btn">View</div>
                     </div>
+                    <img src="assets/photos/portfolio-1.jpg" alt="" class="portfolio__img">
                 </div>
                 <div class="portfolio__item portfolio__item--2">
                     <img src="assets/photos/portfolio-2.jpg" alt="" class="portfolio__img">
@@ -138,13 +147,13 @@
                     <img src="assets/photos/portfolio-4.jpg" alt="" class="portfolio__img">
                 </div>
                 <div class="portfolio__item portfolio__item--5">
-                    <img src="assets/photos/portfolio-5.jpg" alt="" class="portfolio__img">
                     <div class="portfolio__item-layer">
                         <h2>Design project</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident expedita nemo at
                             quibusdam enim.</p>
                         <div class="btn">View</div>
                     </div>
+                    <img src="assets/photos/portfolio-5.jpg" alt="" class="portfolio__img">
                 </div>
             </div>
         </section>
@@ -188,7 +197,7 @@
                         <input class="contact__input" type="text" placeholder="Name">
                         <input class="contact__input" type="email" placeholder="Your e-mail adress">
                         <input class="contact__input" type="text" placeholder="Topic">
-                        <textarea class="contact__input contact__input--area" name="msg" id="" rows="1"
+                        <textarea class="contact__input contact__input--area" name="msg" rows="1"
                             placeholder="Message"></textarea>
                         <button class="btn">Send</button>
                     </form>
@@ -196,7 +205,7 @@
             </div>
         </section>
         <footer class="footer">
-            <span class="footer_copy">Copyright &copy; 2019 CodersCrew</span>
+            <span class="footer__copy">Copyright &copy; 2019 CodersCrew</span>
         </footer>
 
     </div>
